--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,16 +1,43 @@
 server {
     listen 80;
-    client_max_body_size 10M;
+    server_name _;
 
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
+    client_max_body_size 20m;
+    charset utf-8;
+
+    # --- API ---
+    location /api/ {
+        proxy_pass         http://backend:8000/;
+        proxy_set_header   Host              $host;
+        proxy_set_header   X-Real-IP         $remote_addr;
+        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
     }
-    
-    location / {
-        root /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;
-      }
 
+    # короткие ссылки /s/<code> — проксируем в бэкенд
+    location /s/ {
+        proxy_pass       http://backend:8000/s/;
+        proxy_set_header Host $host;
+    }
+
+    # --- STATIC/MEDIA (монтируются томами в контейнер nginx) ---
+    location /static/ {
+        alias /static/;
+        access_log off;
+        expires 7d;
+    }
+
+    location /media/ {
+        alias /media/;
+        access_log off;
+        expires 7d;
+    }
+
+    # --- Фронтовый билд ---
+    root /usr/share/nginx/html;
+
+    # SPA fallback: сначала пробуем файл, иначе index.html
+    location / {
+        try_files $uri /index.html =404;
+    }
 }
