--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,43 +1,99 @@
-server {
-    listen 80;
-    server_name _;
+# Nginx конфиг для Foodgram (gateway)
+# Предполагается, что в контейнер примонтированы:
+# - /static  (том static_data)
+# - /media   (том media_data)
+# - /usr/share/nginx/html (файлы фронтенда, если они лежат в образе)
 
-    client_max_body_size 20m;
-    charset utf-8;
+user  nginx;
+worker_processes  auto;
 
-    # --- API ---
-    location /api/ {
-        proxy_pass         http://backend:8000/;
-        proxy_set_header   Host              $host;
-        proxy_set_header   X-Real-IP         $remote_addr;
-        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Proto $scheme;
-    }
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
 
-    # короткие ссылки /s/<code> — проксируем в бэкенд
-    location /s/ {
-        proxy_pass       http://backend:8000/s/;
-        proxy_set_header Host $host;
-    }
+events {
+    worker_connections 1024;
+}
 
-    # --- STATIC/MEDIA (монтируются томами в контейнер nginx) ---
-    location /static/ {
-        alias /static/;
-        access_log off;
-        expires 7d;
-    }
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    location /media/ {
-        alias /media/;
-        access_log off;
-        expires 7d;
-    }
+    # Логи доступа (по желанию можно выключить)
+    access_log  /var/log/nginx/access.log;
 
-    # --- Фронтовый билд ---
-    root /usr/share/nginx/html;
+    sendfile        on;
+    tcp_nopush      on;
+    tcp_nodelay     on;
+    keepalive_timeout  65;
 
-    # SPA fallback: сначала пробуем файл, иначе index.html
-    location / {
-        try_files $uri /index.html =404;
+    # Gzip можно включить для текстовых ресурсов
+    gzip on;
+    gzip_types text/plain text/css application/javascript application/json application/xml+rss image/svg+xml;
+    gzip_min_length 1024;
+
+    server {
+        listen       80;
+        server_name  _;
+
+        # Увеличим лимит для загрузки изображений рецептов (base64 → файл)
+        client_max_body_size 25M;
+
+        # ---------- Статика и медиа ----------
+        # Тома примонтированы как:
+        # - static_data → /static
+        # - media_data  → /media
+        location /static/ {
+            alias /static/;
+            access_log off;
+            expires 30d;
+        }
+
+        location /media/ {
+            alias /media/;
+            access_log off;
+            expires 30d;
+        }
+
+        # ---------- API ----------
+        # Все /api/* отправляем в backend:8000
+        location /api/ {
+            proxy_pass http://backend:8000;
+            proxy_http_version 1.1;
+
+            proxy_set_header Host              $host;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Если используем WebSocket (на будущее)
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+
+        # ---------- Короткие ссылки ----------
+        # Проксируем /s/ в backend (эндпоинт сам решает редирект)
+        location /s/ {
+            proxy_pass http://backend:8000;
+            proxy_http_version 1.1;
+
+            proxy_set_header Host              $host;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # ---------- Health-check ----------
+        location = /healthz {
+            add_header Content-Type text/plain;
+            return 200 "ok\n";
+        }
+
+        # ---------- SPA ----------
+        # Отдаем файлы фронта из /usr/share/nginx/html
+        # Любой неизвестный путь отдается как /index.html
+        location / {
+            root   /usr/share/nginx/html;
+            try_files $uri /index.html;
+        }
     }
 }
