--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,99 +1,80 @@
-# Nginx конфиг для Foodgram (gateway)
-# Предполагается, что в контейнер примонтированы:
-# - /static  (том static_data)
-# - /media   (том media_data)
-# - /usr/share/nginx/html (файлы фронтенда, если они лежат в образе)
+server {
+    listen 80;
+    server_name _;
 
-user  nginx;
-worker_processes  auto;
+    root /usr/share/nginx/html;
+    index index.html;
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+    # === Фронтовые статические файлы из билда CRA ===
+    location ^~ /static/js/ {
+        root /usr/share/nginx/html;
+        try_files $uri =404;
+        access_log off;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+    location ^~ /static/css/ {
+        root /usr/share/nginx/html;
+        try_files $uri =404;
+        access_log off;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+    location ^~ /static/media/ {
+        root /usr/share/nginx/html;
+        try_files $uri =404;
+        access_log off;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
 
-events {
-    worker_connections 1024;
-}
+    # === Бэкенд-статик и медиа (Django) ===
+    location /static/ {
+        alias /static/;
+        access_log off;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+    location /media/ {
+        alias /media/;
+        access_log off;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    # === Админка Django ===
+    location /admin/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+        proxy_pass http://backend:8000;
+    }
 
-    # Логи доступа (по желанию можно выключить)
-    access_log  /var/log/nginx/access.log;
+    # === API на Gunicorn ===
+    location /api/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+        proxy_pass http://backend:8000;
+    }
 
-    sendfile        on;
-    tcp_nopush      on;
-    tcp_nodelay     on;
-    keepalive_timeout  65;
+    # Короткие ссылки
+    location /s/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+        proxy_pass http://backend:8000;
+    }
 
-    # Gzip можно включить для текстовых ресурсов
-    gzip on;
-    gzip_types text/plain text/css application/javascript application/json application/xml+rss image/svg+xml;
-    gzip_min_length 1024;
+    # Healthcheck
+    location = /nginx-health {
+        add_header Content-Type text/plain;
+        return 200 "ok";
+    }
 
-    server {
-        listen       80;
-        server_name  _;
-
-        # Увеличим лимит для загрузки изображений рецептов (base64 → файл)
-        client_max_body_size 25M;
-
-        # ---------- Статика и медиа ----------
-        # Тома примонтированы как:
-        # - static_data → /static
-        # - media_data  → /media
-        location /static/ {
-            alias /static/;
-            access_log off;
-            expires 30d;
-        }
-
-        location /media/ {
-            alias /media/;
-            access_log off;
-            expires 30d;
-        }
-
-        # ---------- API ----------
-        # Все /api/* отправляем в backend:8000
-        location /api/ {
-            proxy_pass http://backend:8000;
-            proxy_http_version 1.1;
-
-            proxy_set_header Host              $host;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
-            # Если используем WebSocket (на будущее)
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        # ---------- Короткие ссылки ----------
-        # Проксируем /s/ в backend (эндпоинт сам решает редирект)
-        location /s/ {
-            proxy_pass http://backend:8000;
-            proxy_http_version 1.1;
-
-            proxy_set_header Host              $host;
-            proxy_set_header X-Real-IP         $remote_addr;
-            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # ---------- Health-check ----------
-        location = /healthz {
-            add_header Content-Type text/plain;
-            return 200 "ok\n";
-        }
-
-        # ---------- SPA ----------
-        # Отдаем файлы фронта из /usr/share/nginx/html
-        # Любой неизвестный путь отдается как /index.html
-        location / {
-            root   /usr/share/nginx/html;
-            try_files $uri /index.html;
-        }
+    # SPA fallback
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 }
