--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ Django==4.2.15
 djangorestframework==3.15.2
 djoser==2.2.3
 django-filter==24.3
+django-admin-rangefilter==0.11.2
 drf-extra-fields==3.7.0
 Pillow==10.4.0
 psycopg2-binary==2.9.9
