--- a/infra/docker-compose.production.yml
+++ b/infra/docker-compose.production.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   db:
     image: postgres:13-alpine
@@ -25,7 +23,6 @@ services:
     environment:
       DB_HOST: db
       DB_PORT: "5432"
-      # на всякий случай, если не задано в .env:
       STATIC_ROOT: /app/static
       MEDIA_ROOT: /app/media
     depends_on:
@@ -44,15 +41,15 @@ services:
       gunicorn --bind 0.0.0.0:8000 foodgram.wsgi
       "
 
-  gateway:
+  nginx:
     image: pyryanova/foodgram_gateway:latest
-    container_name: foodgram-gateway
+    container_name: foodgram-nginx
     depends_on:
       - backend
     ports:
       - "80:80"
     volumes:
-     - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - static_data:/static:ro
       - media_data:/media:ro
     restart: always
