--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -14,6 +14,17 @@ services:
       timeout: 3s
       retries: 20
 
+  # Одноразовый сборщик фронта
+  frontend:
+    image: node:20-alpine
+    container_name: foodgram-frontend-build
+    working_dir: /app
+    volumes:
+      - ../frontend:/app
+      - ../frontend/build:/app/build
+    command: sh -c "npm ci && npm run build"
+    restart: "no"
+
   backend:
     container_name: foodgram-back
     build:
@@ -21,6 +32,11 @@ services:
       dockerfile: Dockerfile
     env_file:
       - ../backend/.env
+    environment:
+      DB_HOST: db
+      DB_PORT: "5432"
+      STATIC_ROOT: /app/static
+      MEDIA_ROOT: /app/media
     depends_on:
       db:
         condition: service_healthy
@@ -31,25 +47,23 @@ services:
       - "8000"
     command: >
       sh -c "
-      python manage.py collectstatic --noinput &&
       python manage.py migrate --noinput &&
+      python manage.py collectstatic --noinput &&
       gunicorn --bind 0.0.0.0:8000 foodgram.wsgi
       "
 
   nginx:
     image: nginx:1.25.4-alpine
-    container_name: foodgram-proxy
+    container_name: foodgram-nginx
     depends_on:
       - backend
+      - frontend
     ports:
       - "80:80"
     volumes:
-      # наш конфиг
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      # статика/медиа, которые бэкенд складывает в тома
       - static_data:/static:ro
       - media_data:/media:ro
-      # фронтовый прод-билд (после npm run build)
       - ../frontend/build:/usr/share/nginx/html:ro
 
 volumes:
