--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -23,7 +23,7 @@ env:
 
 jobs:
   backend_tests:
-    name: Backend: lint & tests
+    name: "Backend: lint & tests"
     runs-on: ubuntu-latest
     timeout-minutes: 15
 
@@ -43,23 +43,23 @@ jobs:
           --health-retries 20
 
     steps:
-      - name: Checkout
+      - name: "Checkout"
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
           cache: "pip"
 
-      - name: Install dependencies
+      - name: "Install dependencies"
         working-directory: backend
         run: |
           python -m pip install --upgrade pip
           python -m pip install flake8==6.0.0
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Django migrate (CI DB)
+      - name: "Django migrate (CI DB)"
         env:
           DB_ENGINE: django.db.backends.postgresql
           DB_NAME: foodgram
@@ -76,10 +76,10 @@ jobs:
           python manage.py migrate --noinput || echo "skip migrate (no django project?)"
           python manage.py check || true
 
-      - name: Lint (flake8)
+      - name: "Lint (flake8)"
         run: python -m flake8 backend/
 
-      - name: Run tests (pytest if present)
+      - name: "Run tests (pytest if present)"
         env:
           DB_ENGINE: django.db.backends.postgresql
           DB_NAME: foodgram
@@ -98,7 +98,7 @@ jobs:
             echo "no tests found, skip"
           fi
 
-      - name: Notify Telegram (backend tests)
+      - name: "Notify Telegram (backend tests)"
         if: always()
         run: |
           STATUS="${{ job.status }}"
@@ -109,38 +109,38 @@ jobs:
           fi
 
   frontend_tests:
-    name: Frontend: lint & tests
+    name: "Frontend: lint & tests"
     runs-on: ubuntu-latest
     timeout-minutes: 15
 
     steps:
-      - name: Checkout
+      - name: "Checkout"
         uses: actions/checkout@v4
 
-      - name: Set up Node
+      - name: "Set up Node"
         uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: "npm"
           cache-dependency-path: "frontend/package-lock.json"
 
-      - name: Install deps
+      - name: "Install deps"
         working-directory: frontend
         run: npm ci --no-audit --no-fund
 
-      - name: Lint (eslint if present)
+      - name: "Lint (eslint if present)"
         working-directory: frontend
         run: npx --yes eslint . || echo "eslint not configured, skip"
 
-      - name: Run tests (if present)
+      - name: "Run tests (if present)"
         working-directory: frontend
         run: npm test --if-present -- --ci
 
-      - name: Build (sanity check)
+      - name: "Build (sanity check)"
         working-directory: frontend
         run: npm run build
 
-      - name: Notify Telegram (frontend tests)
+      - name: "Notify Telegram (frontend tests)"
         if: always()
         run: |
           STATUS="${{ job.status }}"
@@ -151,25 +151,25 @@ jobs:
           fi
 
   build_backend:
-    name: Build & push backend
+    name: "Build & push backend"
     needs: backend_tests
     runs-on: ubuntu-latest
     timeout-minutes: 20
 
     steps:
-      - name: Checkout
+      - name: "Checkout"
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
+      - name: "Set up Docker Buildx"
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
+      - name: "Login to Docker Hub"
         uses: docker/login-action@v3
         with:
           username: ${{ env.REGISTRY_USER }}
           password: ${{ env.REGISTRY_PASS }}
 
-      - name: Build & push backend
+      - name: "Build & push backend"
         uses: docker/build-push-action@v6
         with:
           context: ./backend
@@ -183,25 +183,25 @@ jobs:
           cache-to: type=gha,mode=max
 
   build_frontend:
-    name: Build & push frontend
+    name: "Build & push frontend"
     needs: frontend_tests
     runs-on: ubuntu-latest
     timeout-minutes: 20
 
     steps:
-      - name: Checkout
+      - name: "Checkout"
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
+      - name: "Set up Docker Buildx"
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
+      - name: "Login to Docker Hub"
         uses: docker/login-action@v3
         with:
           username: ${{ env.REGISTRY_USER }}
           password: ${{ env.REGISTRY_PASS }}
 
-      - name: Prepare frontend Dockerfile
+      - name: "Prepare frontend Dockerfile"
         run: |
           cat > frontend/Dockerfile.ci <<'EOF'
           # build SPA
@@ -221,7 +221,7 @@ jobs:
             CMD wget -qO- http://127.0.0.1/healthz || exit 1
           EOF
 
-      - name: Build & push frontend
+      - name: "Build & push frontend"
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -235,25 +235,25 @@ jobs:
           cache-to: type=gha,mode=max
 
   build_gateway:
-    name: Build & push gateway (nginx + built frontend)
+    name: "Build & push gateway (nginx + built frontend)"
     needs: [build_backend, build_frontend]
     runs-on: ubuntu-latest
     timeout-minutes: 20
 
     steps:
-      - name: Checkout
+      - name: "Checkout"
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
+      - name: "Set up Docker Buildx"
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
+      - name: "Login to Docker Hub"
         uses: docker/login-action@v3
         with:
           username: ${{ env.REGISTRY_USER }}
           password: ${{ env.REGISTRY_PASS }}
 
-      - name: Prepare gateway Dockerfile
+      - name: "Prepare gateway Dockerfile"
         run: |
           mkdir -p infra
           cat > infra/Dockerfile.gateway <<'EOF'
@@ -273,7 +273,7 @@ jobs:
             CMD wget -qO- http://127.0.0.1/nginx-health || exit 1
           EOF
 
-      - name: Build & push gateway
+      - name: "Build & push gateway"
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -286,7 +286,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Notify Telegram (builds)
+      - name: "Notify Telegram (builds)"
         if: always()
         run: |
           STATUS="${{ job.status }}"
@@ -297,22 +297,22 @@ jobs:
           fi
 
   deploy:
-    name: Deploy to server
+    name: "Deploy to server"
     needs: build_gateway
     runs-on: ubuntu-latest
     timeout-minutes: 15
 
     steps:
-      - name: Checkout
+      - name: "Checkout"
         uses: actions/checkout@v4
 
-      - name: Start ssh-agent and add key
+      - name: "Start ssh-agent and add key"
         uses: webfactory/ssh-agent@v0.8.0
         with:
           ssh-private-key: ${{ secrets.SSH_KEY }}
           ssh-passphrase: ${{ secrets.SSH_PASSPHRASE }}
 
-      - name: Ensure remote dir & copy compose file
+      - name: "Ensure remote dir & copy compose file"
         env:
           SSH_USER: ${{ env.SSH_USER }}
           HOST: ${{ env.HOST }}
@@ -322,7 +322,7 @@ jobs:
             docker-compose.production.yml \
             "${SSH_USER}@${HOST}:~/foodgram/docker-compose.production.yml"
 
-      - name: Deploy via SSH
+      - name: "Deploy via SSH"
         env:
           SSH_USER: ${{ env.SSH_USER }}
           HOST: ${{ env.HOST }}
@@ -347,7 +347,7 @@ jobs:
             docker image prune -f >/dev/null 2>&1 || true
           EOF
 
-      - name: Notify Telegram (deploy)
+      - name: "Notify Telegram (deploy)"
         if: always()
         run: |
           STATUS="${{ job.status }}"
