--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -43,23 +43,23 @@ jobs:
           --health-retries 20
 
     steps:
-      - name: "Checkout"
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: "Set up Python"
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
           cache: "pip"
 
-      - name: "Install dependencies"
+      - name: Install dependencies
         working-directory: backend
         run: |
           python -m pip install --upgrade pip
           python -m pip install flake8==6.0.0
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: "Django migrate (CI DB)"
+      - name: Django migrate (CI DB)
         env:
           DB_ENGINE: django.db.backends.postgresql
           DB_NAME: foodgram
@@ -73,13 +73,13 @@ jobs:
           CSRF_TRUSTED_ORIGINS: http://localhost
         working-directory: backend
         run: |
-          python manage.py migrate --noinput || echo "skip migrate (no django project?)"
+          python manage.py migrate --noinput || echo "skip migrate"
           python manage.py check || true
 
-      - name: "Lint (flake8)"
+      - name: Lint (flake8)
         run: python -m flake8 backend/
 
-      - name: "Run tests (pytest if present)"
+      - name: Run tests (pytest if present)
         env:
           DB_ENGINE: django.db.backends.postgresql
           DB_NAME: foodgram
@@ -98,60 +98,6 @@ jobs:
             echo "no tests found, skip"
           fi
 
-      - name: "Notify Telegram (backend tests)"
-        if: always()
-        run: |
-          STATUS="${{ job.status }}"
-          MSG="foodgram: backend tests finished with status: ${STATUS}"
-          if [ -n "${TELEGRAM_TOKEN}" ] && [ -n "${TELEGRAM_TO}" ]; then
-            curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage" \
-              -d chat_id="${TELEGRAM_TO}" -d text="${MSG}" >/dev/null || true
-          fi
-
-  frontend_tests:
-    name: "Frontend: lint & tests"
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-
-    steps:
-      - name: "Checkout"
-        uses: actions/checkout@v4
-
-      - name: "Set up Node"
-        uses: actions/setup-node@v4
-        with:
-          node-version: "18"
-          cache: "npm"
-          cache-dependency-path: "frontend/package-lock.json"
-
-      - name: "Install deps"
-        working-directory: frontend
-        run: npm ci --no-audit --no-fund
-
-      - name: "Lint (eslint if present)"
-        working-directory: frontend
-        run: npx --yes eslint . || echo "eslint not configured, skip"
-
-      - name: "Run tests (if present)"
-        working-directory: frontend
-        env:
-          CI: "true"
-        run: npm test --if-present -- --ci --watchAll=false
-
-      - name: "Build (sanity check)"
-        working-directory: frontend
-        run: npm run build
-
-      - name: "Notify Telegram (frontend tests)"
-        if: always()
-        run: |
-          STATUS="${{ job.status }}"
-          MSG="foodgram: frontend checks finished with status: ${STATUS}"
-          if [ -n "${TELEGRAM_TOKEN}" ] && [ -n "${TELEGRAM_TO}" ]; then
-            curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage" \
-              -d chat_id="${TELEGRAM_TO}" -d text="${MSG}" >/dev/null || true
-          fi
-
   build_backend:
     name: "Build & push backend"
     needs: backend_tests
@@ -159,19 +105,19 @@ jobs:
     timeout-minutes: 20
 
     steps:
-      - name: "Checkout"
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: "Set up Docker Buildx"
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: "Login to Docker Hub"
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ env.REGISTRY_USER }}
           password: ${{ env.REGISTRY_PASS }}
 
-      - name: "Build & push backend"
+      - name: Build & push backend
         uses: docker/build-push-action@v6
         with:
           context: ./backend
@@ -186,44 +132,39 @@ jobs:
 
   build_frontend:
     name: "Build & push frontend"
-    needs: frontend_tests
     runs-on: ubuntu-latest
     timeout-minutes: 20
 
     steps:
-      - name: "Checkout"
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: "Set up Docker Buildx"
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: "Login to Docker Hub"
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ env.REGISTRY_USER }}
           password: ${{ env.REGISTRY_PASS }}
 
-      - name: "Prepare frontend Dockerfile"
+      - name: Prepare frontend Dockerfile
         run: |
           cat > frontend/Dockerfile.ci <<'EOF'
-          # build SPA
-          FROM node:18-alpine AS build   # <-- changed to Node 18
+          FROM node:18-alpine AS build
           WORKDIR /app
           COPY frontend/package*.json ./
           RUN npm ci --no-audit --no-fund
           COPY frontend/ ./
           RUN npm run build
-
-          # serve with nginx (standalone image)
           FROM nginx:1.25-alpine
           COPY --from=build /app/build /usr/share/nginx/html
-          # simple health endpoint
           RUN printf "ok" > /usr/share/nginx/html/healthz
           HEALTHCHECK --interval=10s --timeout=3s --retries=10 \
             CMD wget -qO- http://127.0.0.1/healthz || exit 1
           EOF
 
-      - name: "Build & push frontend"
+      - name: Build & push frontend
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -237,37 +178,34 @@ jobs:
           cache-to: type=gha,mode=max
 
   build_gateway:
-    name: "Build & push gateway (nginx + built frontend)"
+    name: "Build & push gateway"
     needs: [build_backend, build_frontend]
     runs-on: ubuntu-latest
     timeout-minutes: 20
 
     steps:
-      - name: "Checkout"
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: "Set up Docker Buildx"
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: "Login to Docker Hub"
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ env.REGISTRY_USER }}
           password: ${{ env.REGISTRY_PASS }}
 
-      - name: "Prepare gateway Dockerfile"
+      - name: Prepare gateway Dockerfile
         run: |
           mkdir -p infra
           cat > infra/Dockerfile.gateway <<'EOF'
-          # 1) build frontend from repo
-          FROM node:18-alpine AS front   # <-- changed to Node 18
+          FROM node:18-alpine AS front
           WORKDIR /app
           COPY frontend/package*.json ./
           RUN npm ci --no-audit --no-fund
           COPY frontend/ ./
           RUN npm run build
-
-          # 2) nginx with config and built frontend
           FROM nginx:1.25-alpine
           COPY infra/nginx.conf /etc/nginx/conf.d/default.conf
           COPY --from=front /app/build /usr/share/nginx/html
@@ -275,7 +213,7 @@ jobs:
             CMD wget -qO- http://127.0.0.1/nginx-health || exit 1
           EOF
 
-      - name: "Build & push gateway"
+      - name: Build & push gateway
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -288,16 +226,6 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: "Notify Telegram (builds)"
-        if: always()
-        run: |
-          STATUS="${{ job.status }}"
-          MSG="foodgram: images build&push finished with status: ${STATUS}"
-          if [ -n "${TELEGRAM_TOKEN}" ] && [ -n "${TELEGRAM_TO}" ]; then
-            curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage" \
-              -d chat_id="${TELEGRAM_TO}" -d text="${MSG}" >/dev/null || true
-          fi
-
   deploy:
     name: "Deploy to server"
     needs: build_gateway
@@ -305,16 +233,16 @@ jobs:
     timeout-minutes: 15
 
     steps:
-      - name: "Checkout"
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: "Start ssh-agent and add key"
+      - name: Start ssh-agent and add key
         uses: webfactory/ssh-agent@v0.8.0
         with:
           ssh-private-key: ${{ secrets.SSH_KEY }}
           ssh-passphrase: ${{ secrets.SSH_PASSPHRASE }}
 
-      - name: "Ensure remote dir & copy compose file"
+      - name: Ensure remote dir & copy compose file
         env:
           SSH_USER: ${{ env.SSH_USER }}
           HOST: ${{ env.HOST }}
@@ -324,7 +252,7 @@ jobs:
             docker-compose.production.yml \
             "${SSH_USER}@${HOST}:~/foodgram/docker-compose.production.yml"
 
-      - name: "Deploy via SSH"
+      - name: Deploy via SSH
         env:
           SSH_USER: ${{ env.SSH_USER }}
           HOST: ${{ env.HOST }}
@@ -334,27 +262,21 @@ jobs:
             cd ~/foodgram
             docker compose -f docker-compose.production.yml pull
             docker compose -f docker-compose.production.yml up -d --remove-orphans
-
-            # post-deploy tasks (idempotent)
             docker compose -f docker-compose.production.yml exec -T backend \
               python manage.py migrate --noinput || true
             docker compose -f docker-compose.production.yml exec -T backend \
               python manage.py collectstatic --noinput || true
             docker compose -f docker-compose.production.yml exec -T backend \
               python manage.py fill_ingredients_from_csv --path data/ingredients.csv || true
-
-            # smoke-check nginx
             curl -fsS http://127.0.0.1/nginx-health >/dev/null || exit 1
-
             docker image prune -f >/dev/null 2>&1 || true
           EOF
 
-      - name: "Notify Telegram (deploy)"
-        if: always()
+      - name: Telegram notify (success only)
+        if: ${{ success() }}
         run: |
-          STATUS="${{ job.status }}"
-          MSG="foodgram: deploy finished with status: ${STATUS}"
           if [ -n "${TELEGRAM_TOKEN}" ] && [ -n "${TELEGRAM_TO}" ]; then
+            MSG="Фудграм: деплой успешно выполнен (commit ${GITHUB_SHA::7})"
             curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage" \
               -d chat_id="${TELEGRAM_TO}" -d text="${MSG}" >/dev/null || true
           fi
