--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -3,15 +3,7 @@ name: foodgram-ci-cd
 on:
   push:
     branches: ["main"]
-    tags: ["v*"]
   workflow_dispatch:
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
-permissions:
-  contents: read
 
 env:
   REGISTRY_USER: ${{ secrets.DOCKER_USERNAME }}
@@ -22,11 +14,9 @@ env:
   TELEGRAM_TO: ${{ secrets.TELEGRAM_TO }}
 
 jobs:
-  backend_tests:
-    name: "Backend: lint & tests"
+  tests:
+    name: Backend: lint & tests
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-
     services:
       postgres:
         image: postgres:13-alpine
@@ -41,46 +31,21 @@ jobs:
           --health-interval 5s
           --health-timeout 3s
           --health-retries 20
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-          cache: "pip"
-
-      - name: Install dependencies
+      - name: Install deps
         working-directory: backend
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flake8==6.0.0
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-      - name: Django migrate (CI DB)
-        env:
-          DB_ENGINE: django.db.backends.postgresql
-          DB_NAME: foodgram
-          POSTGRES_USER: foodgram
-          POSTGRES_PASSWORD: password
-          DB_HOST: 127.0.0.1
-          DB_PORT: 5432
-          SECRET_KEY: test-secret
-          DEBUG: "false"
-          ALLOWED_HOSTS: localhost,127.0.0.1
-          CSRF_TRUSTED_ORIGINS: http://localhost
-        working-directory: backend
-        run: |
-          python manage.py migrate --noinput || echo "skip migrate"
-          python manage.py check || true
-
-      - name: Lint (flake8)
-        continue-on-error: true
+          pip install flake8==6.0.0
+          pip install -r requirements.txt
+      - name: Lint
         run: python -m flake8 backend/
-
-      - name: Run tests (pytest if present)
+      - name: Migrate & test
+        working-directory: backend
         env:
           DB_ENGINE: django.db.backends.postgresql
           DB_NAME: foodgram
@@ -90,194 +55,107 @@ jobs:
           DB_PORT: 5432
           SECRET_KEY: test-secret
           DEBUG: "false"
-        working-directory: backend
         run: |
-          if [ -f pytest.ini ] || [ -f tox.ini ] || ls -1 tests* 2>/dev/null | grep -q .; then
-            python -m pip install pytest
-            pytest -q
-          else
-            echo "no tests found, skip"
-          fi
+          python manage.py migrate --noinput
+          python manage.py test -v 2
 
   build_backend:
-    name: "Build & push backend"
-    needs: backend_tests
+    name: Build & push backend
+    needs: tests
     runs-on: ubuntu-latest
-    timeout-minutes: 20
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
         with:
           username: ${{ env.REGISTRY_USER }}
           password: ${{ env.REGISTRY_PASS }}
-
-      - name: Build & push backend
-        uses: docker/build-push-action@v6
+      - uses: docker/build-push-action@v6
         with:
           context: ./backend
           file: ./backend/Dockerfile
-          push: true
           platforms: linux/amd64
+          push: true
           tags: |
             ${{ env.REGISTRY_USER }}/foodgram_backend:latest
             ${{ env.REGISTRY_USER }}/foodgram_backend:sha-${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
 
-  build_frontend:
-    name: "Build & push frontend"
+  build_gateway:
+    name: Build & push gateway (nginx + built frontend)
+    needs: build_backend
     runs-on: ubuntu-latest
-    timeout-minutes: 20
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
         with:
           username: ${{ env.REGISTRY_USER }}
           password: ${{ env.REGISTRY_PASS }}
-
-      - name: Prepare frontend Dockerfile
+      - name: Prepare Dockerfile.gateway
         run: |
-          cat > frontend/Dockerfile.ci <<'EOF'
+          mkdir -p infra
+          cat > infra/Dockerfile.gateway <<'EOF'
           FROM node:18-alpine AS build
           WORKDIR /app
           COPY frontend/package*.json ./
           RUN npm ci --no-audit --no-fund --legacy-peer-deps
           COPY frontend/ ./
           RUN npm run build
+
           FROM nginx:1.25-alpine
+          COPY infra/nginx.conf /etc/nginx/conf.d/default.conf
           COPY --from=build /app/build /usr/share/nginx/html
           RUN printf "ok" > /usr/share/nginx/html/healthz
           HEALTHCHECK --interval=10s --timeout=3s --retries=10 \
             CMD wget -qO- http://127.0.0.1/healthz || exit 1
           EOF
-
-      - name: Build & push frontend
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: frontend/Dockerfile.ci
-          push: true
-          platforms: linux/amd64
-          tags: |
-            ${{ env.REGISTRY_USER }}/foodgram_frontend:latest
-            ${{ env.REGISTRY_USER }}/foodgram_frontend:sha-${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  build_gateway:
-    name: "Build & push gateway"
-    needs: [build_backend, build_frontend]
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ env.REGISTRY_USER }}
-          password: ${{ env.REGISTRY_PASS }}
-
-      - name: Prepare gateway Dockerfile
-        run: |
-          mkdir -p infra
-          cat > infra/Dockerfile.gateway <<'EOF'
-          FROM node:18-alpine AS front
-          WORKDIR /app
-          COPY frontend/package*.json ./
-          RUN npm ci --no-audit --no-fund --legacy-peer-deps
-          COPY frontend/ ./
-          RUN npm run build
-          FROM nginx:1.25-alpine
-          COPY infra/nginx.conf /etc/nginx/conf.d/default.conf
-          COPY --from=front /app/build /usr/share/nginx/html
-          HEALTHCHECK --interval=10s --timeout=3s --retries=10 \
-            CMD wget -qO- http://127.0.0.1/nginx-health || exit 1
-          EOF
-
-      - name: Build & push gateway
-        uses: docker/build-push-action@v6
+      - uses: docker/build-push-action@v6
         with:
           context: .
           file: infra/Dockerfile.gateway
-          push: true
           platforms: linux/amd64
+          push: true
           tags: |
             ${{ env.REGISTRY_USER }}/foodgram_gateway:latest
             ${{ env.REGISTRY_USER }}/foodgram_gateway:sha-${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
 
   deploy:
-    name: "Deploy to server"
+    name: Deploy to server
     needs: build_gateway
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Start ssh-agent and add key
-        uses: webfactory/ssh-agent@v0.8.0
+      - uses: actions/checkout@v4
+      - uses: appleboy/scp-action@master
         with:
-          ssh-private-key: ${{ secrets.SSH_KEY }}
-          ssh-passphrase: ${{ secrets.SSH_PASSPHRASE }}
-
-      - name: Ensure remote dir & copy compose file
-        env:
-          SSH_USER: ${{ env.SSH_USER }}
-          HOST: ${{ env.HOST }}
-        run: |
-          ssh -o StrictHostKeyChecking=no "${SSH_USER}@${HOST}" "mkdir -p ~/foodgram"
-          rsync -avz -e "ssh -o StrictHostKeyChecking=no" \
-            infra/docker-compose.production.yml \
-            "${SSH_USER}@${HOST}:~/foodgram/docker-compose.production.yml"
-
-      - name: Deploy via SSH
-        env:
-          SSH_USER: ${{ env.SSH_USER }}
-          HOST: ${{ env.HOST }}
-        run: |
-          ssh -o StrictHostKeyChecking=no "${SSH_USER}@${HOST}" <<'EOF'
-            set -Eeuo pipefail
+          host: ${{ env.HOST }}
+          username: ${{ env.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          source: "infra/docker-compose.production.yml,infra/nginx.conf"
+          target: "foodgram"
+          overwrite: true
+      - uses: appleboy/ssh-action@master
+        with:
+          host: ${{ env.HOST }}
+          username: ${{ env.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          script: |
+            set -e
             cd ~/foodgram
             docker compose -f docker-compose.production.yml pull
             docker compose -f docker-compose.production.yml up -d --remove-orphans
-            docker compose -f docker-compose.production.yml exec -T backend \
-              python manage.py migrate --noinput || true
-            docker compose -f docker-compose.production.yml exec -T backend \
-              python manage.py collectstatic --noinput || true
-            docker compose -f docker-compose.production.yml exec -T backend \
-              python manage.py fill_ingredients_from_csv --path data/ingredients.csv || true
-            curl -fsS http://127.0.0.1/nginx-health >/dev/null || exit 1
-            docker image prune -f >/dev/null 2>&1 || true
-          EOF
+            docker compose -f docker-compose.production.yml exec -T backend python manage.py migrate --noinput || true
+            docker compose -f docker-compose.production.yml exec -T backend python manage.py collectstatic --noinput || true
+            docker compose -f docker-compose.production.yml exec -T backend python manage.py fill_ingredients_from_csv --path data/ingredients.csv || true
 
-      - name: Telegram notify (success only)
-        if: ${{ success() }}
-        run: |
-          if [ -n "${TELEGRAM_TOKEN}" ] && [ -n "${TELEGRAM_TO}" ]; then
-            MSG="Foodgram: деплой успешно выполнен (commit ${GITHUB_SHA::7})"
-            curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage" \
-              -d chat_id="${TELEGRAM_TO}" -d text="${MSG}" >/dev/null || true
-          fi
+  notify:
+    name: Telegram notify (success)
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - uses: appleboy/telegram-action@master
+        with:
+          to: ${{ env.TELEGRAM_TO }}
+          token: ${{ env.TELEGRAM_TOKEN }}
+          message: "Foodgram: деплой успешно выполнен (commit ${{ github.sha }})."
