--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -23,7 +23,7 @@ env:
 
 jobs:
   backend_tests:
-    name: Backend: lint & tests
+    name: "Backend: lint & tests"
     runs-on: ubuntu-latest
     timeout-minutes: 15
 
