--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -26,7 +26,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8==6.0.0
           pip install -r ./backend/requirements.txt
-      - name: Test with flake8 and django tests
+      - name: Lint (flake8, non-blocking)
+        continue-on-error: true
+        run: python -m flake8 backend/
+      - name: Run Django tests
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
@@ -38,7 +41,6 @@ jobs:
           SECRET_KEY: test-secret
           DEBUG: "false"
         run: |
-          python -m flake8 backend/
           cd backend/
           python manage.py test
 
