--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -24,7 +24,7 @@ jobs:
   build_and_push_backend:
     name: Build & Push Backend
     runs-on: ubuntu-latest
-    needs: tests
+    needs: [tests]
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
@@ -41,7 +41,7 @@ jobs:
   build_and_push_frontend:
     name: Build & Push Frontend
     runs-on: ubuntu-latest
-    needs: tests
+    needs: [tests]
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
@@ -58,9 +58,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs:
-      - build_and_push_backend
-      - build_and_push_frontend
+    needs: [build_and_push_backend, build_and_push_frontend]
     steps:
       - name: SSH: prepare repo
         uses: appleboy/ssh-action@master
@@ -100,7 +98,7 @@ jobs:
             sudo docker-compose -f docker-compose.production.yml up -d
             sudo docker-compose -f docker-compose.production.yml exec -T backend python manage.py migrate --noinput
             sudo docker-compose -f docker-compose.production.yml exec -T backend python manage.py collectstatic --noinput
-            sudo docker-compose -f docker-compose.production.yml exec -T backend python manage.py load_ingredients || \
+            sudo docker-compose -f docker-compose.production.yml exec -T backend python manage.py load_ingredients || true
             sudo docker-compose -f docker-compose.production.yml exec -T backend python manage.py fill_ingredients_from_csv --path data/ingredients.csv || true
             sudo docker-compose -f docker-compose.production.yml exec -T backend python manage.py import_tags || true
 
